flux/media/sonarr/http-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
  labels:
    app.kubernetes.io/name: sonarr
  annotations:
    ksbh.rs/modules: "https,oidc"
spec:
  ingressClassName: ksbh
  tls:
    - secretName: kys.dog
      hosts:
        - sonarr.kys.dog
  rules:
    - host: sonarr.kys.dog
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
